RESOLVED FIXED311409
REGRESSION(305023@main): cannot jsCast during finalize either
https://bugs.webkit.org/show_bug.cgi?id=311409
Summary REGRESSION(305023@main): cannot jsCast during finalize either
Anne van Kesteren
Reported 2026-04-03 05:15:48 PDT
.
Attachments
Anne van Kesteren
Comment 1 2026-04-03 05:15:50 PDT
Anne van Kesteren
Comment 2 2026-04-03 05:16:43 PDT
EWS
Comment 3 2026-04-03 08:09:13 PDT
Committed 310516@main (4be186fa2954): <https://commits.webkit.org/310516@main> Reviewed commits have been landed. Closing PR #61971 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.