REGRESSION(305023@main): cannot jsCast during finalize either https://bugs.webkit.org/show_bug.cgi?id=311409 rdar://173949856

Reviewed by Keith Miller.

Test: platform/mac/plugins/runtime-object-prevent-gc-crash.html
Canonical link: https://commits.webkit.org/310516@main